<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RadioGroup
        android:id="@+id/rg_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/bg_weibo_listab"
        android:gravity="center"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_home"
            style="@style/weibo_tab"
            android:checked="true"
            android:drawableTop="@drawable/weibolist_global_selector"
            android:text="@string/tab_home" />

        <RadioButton
            android:id="@+id/radio_category"
            style="@style/weibo_tab"
            android:drawableTop="@drawable/weibolist_attention_selector"
            android:text="@string/tab_channel" />

        <RadioButton
            android:id="@+id/radio_message"
            style="@style/weibo_tab"
            android:drawableTop="@drawable/weibolist_comment_selector"
            android:text="@string/tab_message" />

        <RadioButton
            android:id="@+id/radio_myProfile"
            style="@style/weibo_tab"
            android:drawableTop="@drawable/weibolist_mylist_selector"
            android:text="@string/tab_mine" />
    </RadioGroup>

</LinearLayout>